# o-note

./: .gitignore  AGENTS.md  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
.planning/ui-lab/: BRIEF.md  BULLPEN_STYLE_CONTRACT.md
bench/: generate-fixtures.mjs  phase6-scale.mjs  startup-baseline.mjs
docs/: 000-product-brief.md  001-tech-stack.md  002-development-rules.md  003-feature-roadmap.md  004-html-artifact-requirements.md  005-ui-ux-direction.md  006-performance-contract.md
docs/performance/: phase-06-baseline.json
docs/phases/: phase-00-foundation.md  phase-01-core-notes.md  phase-02-rendering.md  phase-03-search-indexing.md  phase-04-import-export.md  phase-05-html-artifact-workflow.md  phase-06-reliability-scale.md
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  storage.rs
src/rendering/: render.test.ts  render.ts
src/services/: notes.ts
src/shared/: domain.ts
src/ui/: App.test.tsx  App.tsx
tests/e2e/: shell.spec.ts
